# smart_mirror_ai

./: .gitignore  README.md  app.py  camera_emotion.py  predict_emotion.py  pyproject.toml  requirements-test.txt  requirements.txt  train_emotion_model.py
.github/workflows/: ci.yml
smart_mirror_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_predict.py
