[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-mirror-ai"
version = "0.1.0"
description = "Emotion detection AI for Smart Mirror system"
requires-python = ">=3.10,<3.14"
dependencies = [
    "tensorflow>=2.10,<3",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "keras>=2.13",
    "flask>=2.3",
    "pillow>=10.0",
    "flask-cors>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
